# MIPT-Xor-List

./: CMakeLists.txt  README.md  allocator.cpp  allocator.h  checker.cpp  checker.h  gtests.cpp  list.h  main.cpp  smallfunctions.cpp  smallfunctions.h  test.cpp  test.h
